# aiops-platform

./: .gitignore  CLAUDE.md  README.md  start.sh
.github/workflows/: build.yml  deploy.yml  security.yml  test.yml
aiops-app/: .env.example  SPEC.md  package-lock.json  package.json
aiops-app/e2e/: agent-panel.spec.ts  agent-v3-benchmark.spec.ts  pipeline-builder.spec.ts
aiops-contract/python/: pyproject.toml
aiops-contract/python/aiops_contract/: __init__.py  report.py
aiops-contract/python/tests/: test_contract.py
aiops-contract/typescript/: package-lock.json  package.json
deploy/: .env.aiops-app.template  .env.backend.template  README-java.md  aiops-app.service  aiops-java-api.env.example  aiops-java-api.service  aiops-python-sidecar.env.example  aiops-python-sidecar.service  fastapi-backend.service  java-rollback.sh  java-update.sh  nginx.conf  ontology-simulator.service  update.sh
docs/: Hybrid_java_python.md  PROJECT_HANDOFF.md  SPEC_generative_ui_v1.md  SPEC_java_migration_v1.md  SPEC_next_phase.md  SPEC_phase_5_ux_5to7.md  SPEC_pipeline_builder.md  SPEC_pipeline_v2.md  SPEC_skill_description_autogen.md  SPEC_ux_console_v1.md  TEST_CASES_BASELINE.md  TEST_CASES_V2.md  TEST_CASES_V3.md  data_pipeline_builder.md
docs/history/: AI_INSTRUCTIONS.md  API.md  README.md  (+48 more)
fastapi_backend_service/: .env.example  SPEC.md  main.py  requirements.txt
java-backend/: README.md  build.gradle.kts  settings.gradle.kts
ontology_simulator/: SPEC.md  config.py
python_ai_sidecar/: README.md  auth.py  config.py  main.py  requirements.txt
scripts/: perf-smoke.sh
(+512 files in other folders)
