[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiops-contract"
version = "0.1.0"
description = "AIOps Report Contract — shared language between Agent and AIOps App"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["aiops_contract"]
